# MFLib

./: .gitignore  CMakeLists.txt  License_1.0.txt  ModflowLib.sln  ModflowLib_2013.sln  build.py  conanfile.py  runTests.py  test_libraries_changed.py
ModflowLib/: ModflowLib.vcproj  ModflowLib.vcxproj  ModflowLib.vcxproj.filters  ModflowLib2013.vcxproj  ModflowLib2013.vcxproj.filters  ModflowLib_2013.vcxproj  RunTests.bat  RunTests64.bat
ModflowLib/CxxTest/: build_test_runner.bat  list_test_headers.py  update_on_changed.py
ModflowLib/source/: Export.cpp  Export.h  ModflowLib.cpp  ModflowLib.h  RunTest.cpp  RunTest.h
ModflowLib/source/private/: ArrayReader.cpp  ArrayReader.h  ArrayReader.t.h  CmdLine.cpp  CmdLine.h  CmdLine.t.h  ListReader.cpp  ListReader.h  ListReaderStr.cpp  ListReaderStr.h  ListReaderStr.t.h  MNWReader.cpp  MNWReader.h  MNWReader.t.h  MfData.cpp  MfData.h  MfData.t.h  MfLibAsserts.cpp  MfLibAsserts.h  ModflowLib.t.h  Parameters.cpp  Parameters.h  Parameters.t.h  Sfr2Reader.cpp  Sfr2Reader.h  Sfr2Reader.t.h
ModflowLib/source/private/ArrayReader/: ArrayReaderParser.cpp  ArrayReaderParser.h  ArrayReaderParser.t.cpp  ArrayReaderParser.t.h
ModflowLib/source/private/Gms2Mf2k/: Converter.cpp  Converter.h  Converter.t.h  Gms2Mf2k.t.cpp  Gms2Mf2k.t.h
ModflowLib/source/private/Gms2Mf2k/Files/: DisFileReader.cpp  DisFileReader.h  DisFileReader.t.h  FileProcessor.cpp  FileProcessor.h  FileProcessor.t.h  LgrFileReader.cpp  LgrFileReader.h  LgrFileReader.t.h  NameFileReader.cpp  NameFileReader.h  NameFileReader.t.h
ModflowLib/source/private/H5DataReader/: H5DataReaderUtil.cpp  H5DataReaderUtil.h  H5DataSetReader.cpp  H5DataSetReader.h  H5DataSetReader.t.cpp  H5DataSetReader.t.h  H5DataSetWriter.cpp  H5DataSetWriter.h  H5DataSetWriter.t.h  H5DataSetWriterSetup.h  H5VecCStrReader.cpp  H5VecCStrReader.h  H5VecCStrReader.t.cpp  H5VecCStrReader.t.h
ModflowLib/source/private/ListReader/: CellIdToIJK.h  CellIdToIJK.t.cpp  CellIdToIJK.t.h  ListReaderH5.cpp  ListReaderH5.h  ListReaderH5.t.cpp  ListReaderH5.t.h  ListReaderParser.cpp  ListReaderParser.h  ListReaderParser.t.cpp  ListReaderParser.t.h
ModflowLib/source/private/MfData/: MfGlobal.cpp  MfGlobal.h  MfGlobal.t.h  MfPackageUtil.cpp  MfPackageUtil.h  MfPackageUtil.t.h
ModflowLib/source/private/MfData/MfExport/: MfExporter.cpp  MfExporter.h  MfExporter.t.h
ModflowLib/source/private/Parameters/: EReadAsciiFile.cpp  EReadAsciiFile.h  MultArray.cpp  MultArray.h  MultArray.t.h  Param.h  Param.t.cpp  Param.t.h  ParamFileReader.cpp  ParamFileReader.h  ParamFileReader.t.h  ParamList.cpp  ParamList.h  ParamList.t.h  ParamUtil.cpp  ParamUtil.h  PilotPoints.cpp  PilotPoints.h  PilotPoints.t.h  SenFileReader.cpp  SenFileReader.h  SenFileReader.t.h
ModflowLib/source/private/SQLite/: CppSQLite3.cpp  CppSQLite3.h  sqlite3.c
ModflowLib/source/private/samg/: samg.cpp  samg.h
ModflowLib/source/private/util/: CToken.cpp  CToken.h  ContArray.h  EException.h  EReadAsciiFile.cpp  EReadAsciiFile.h  ErrorStack.h  H5Initialize.cpp  H5Initialize.h  LateLoad.h  StdString.h  dblprec.h  util.cpp  util.h  util.t.h
ModflowLib/testFiles/Gms2Mf2k/calib space/: calib space.ba6  calib space.chd  calib space.chob  calib space.dis  calib space.h5  calib space.lmt  calib space.lpf  calib space.mfn  calib space.mfr  calib space.mfs  calib space.obs  calib space.rch  calib space.riv  calib space.wel
ModflowLib/testFiles/Gms2Mf2k/calib space/base/: calib_space.ba6  (+12 more)
ModflowLib/testFiles/Gms2Mf2k/lgr/: wrong_file_format.lgr
ModflowLib/testFiles/Gms2Mf2k/mnw2/: mnw2.ba6  mnw2.dis  mnw2.h5  mnw2.lpf  mnw2.mfn  mnw2.mfs  mnw2.mnw2  mnw2.mnwi  mnw2.rch
ModflowLib/testFiles/Gms2Mf2k/noSeawatAux/: noSeawatAux.ba6  noSeawatAux.chd  noSeawatAux.dis  noSeawatAux.drn  noSeawatAux.ghb  noSeawatAux.h5  noSeawatAux.lmt  noSeawatAux.lpf  noSeawatAux.mfn  noSeawatAux.mfr  noSeawatAux.mfs  noSeawatAux.oc  noSeawatAux.riv  noSeawatAux.wel
ModflowLib/testFiles/Gms2Mf2k/readArray/: arrayTest.h5
ModflowLib/testFiles/Gms2Mf2k/sg_ss_pest/: smallGrid_65.ba6  smallGrid_65.chd  smallGrid_65.dis  smallGrid_65.drn  smallGrid_65.evt  smallGrid_65.gbob  smallGrid_65.ghb  smallGrid_65.h5  smallGrid_65.lpf  smallGrid_65.mfn  smallGrid_65.mfr  smallGrid_65.mfs  smallGrid_65.obs  smallGrid_65.param  smallGrid_65.rch  smallGrid_65.riv  smallGrid_65.snn  smallGrid_65.str  smallGrid_65.wel
ModflowLib/testFiles/Gms2Mf2k/smallGrid_Trans/: smallGrid_Trans_Str1_65.ba6  smallGrid_Trans_Str1_65.dis  smallGrid_Trans_Str1_65.ghb  smallGrid_Trans_Str1_65.h5  smallGrid_Trans_Str1_65.mfn  smallGrid_Trans_Str1_65.mfr  smallGrid_Trans_Str1_65.mfs  smallGrid_Trans_Str1_65.obs  smallGrid_Trans_Str1_65.oc  smallGrid_Trans_Str1_65.riv
ModflowLib/testFiles/Gms2Mf2k/stream/: Dbl base.str  Flt base.str  smallGrid_Trans_Str1_65.h5  smallGrid_Trans_Str1_65.str
ModflowLib/testFiles/Gms2Mf2k/withSeawatAux/: withSeawatAux.ba6  withSeawatAux.chd  withSeawatAux.dis  withSeawatAux.drn  withSeawatAux.ghb  withSeawatAux.h5  withSeawatAux.lmt  withSeawatAux.lpf  withSeawatAux.mfn  withSeawatAux.mfr  withSeawatAux.riv  withSeawatAux.wel
ModflowLib/testFiles/Gms2Mf2k/wrongOrderedAux/: wrongOrderedAux.ba6  wrongOrderedAux.chd  wrongOrderedAux.dis  wrongOrderedAux.drn  wrongOrderedAux.ghb  wrongOrderedAux.lmt  wrongOrderedAux.lpf  wrongOrderedAux.mfn  wrongOrderedAux.mfr  wrongOrderedAux.oc  wrongOrderedAux.riv  wrongOrderedAux.wel
ModflowLib/testFiles/HDF5_InputFiles/: i.ab  input.h5  k.btn  l.gcg  modfmap.h5  pest.h5  smallGrid_Trans.h5  smallGrid_Trans1.h5
ModflowLib/testFiles/Parameter/: pest.h5  pest.param  pest.snn  wrongPest.snn
ModflowLib/testFiles/mfInputs1/: run2.alt  run2.asp  run2.ba6  run2.dis  run2.disu  run2.drn  run2.drob  run2.hfb  run2.hob  run2.lmt  run2.lpf  run2.m2p  run2.mfn  run2.mfr  run2.mfs  run2.mlt  run2.obs  run2.oc  run2.param  run2.pcg  run2.pes  run2.rch  run2.rpf  run2.snn  run2.wel  run2_Disu.mfn  run2_WrongDis.mfn  run2_WrongFormat.dis  run2_WrongFormat.mfn
mfLibFortran/: aquaveo.f90  aquaveoutil.f90  exportData.F90  mfLib.f90  mfLib77.f  mfLib77USG.f
(+495 files in other folders)
